<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#aaaaaa">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.feiyou.headstyle.view.crop.ClipImageLayout
            android:id="@+id/id_clipImageLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>

        <LinearLayout
            android:id="@+id/auth_user_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/qq_auth_icon"/>

            <TextView
                android:id="@+id/qq_nick_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </LinearLayout>
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/crop_operation_layout"
        android:background="@color/refresh_color">
    </View>

    <RelativeLayout
        android:id="@+id/crop_operation_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/crop_cancel_btn"
            android:layout_width="70dp"
            android:layout_height="38dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/cancel_selector"
            android:text="@string/cancel_text"
            android:textColor="@color/forget_text_color"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/crop_tip_text"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/crop_select_btn"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:background="@drawable/common_selector"
            android:text="@string/crop_select_text"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </RelativeLayout>

</RelativeLayout>