<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/title_layout"
        layout="@layout/common_back"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/input_bg">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:src="@mipmap/user_login_icon"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:background="@null"
            android:hint="@string/hint_user_name_text"
            android:textColor="@color/forget_text_color"
            android:textColorHint="@color/common_color"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_bg">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:src="@mipmap/user_password_icon"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:background="@null"
            android:hint="@string/hint_password_text"
            android:textColor="@color/forget_text_color"
            android:textColorHint="@color/common_color"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="16dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/common_selector"
            android:text="@string/login_text"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/to_register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/register_text"
            android:textColor="@color/forget_text_color"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/forget_password_text"
            android:textColor="@color/forget_text_color"
            android:textSize="16sp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="80dp"
        android:gravity="center">

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginRight="15sp"
            android:layout_weight="1"
            android:background="@color/line_color"></View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quick_login_text"
            android:textSize="16sp"
            android:textColor="@color/quick_text_color"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginLeft="15sp"
            android:layout_weight="1"
            android:background="@color/line_color"></View>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/qq_auth_login_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/qq_login_selector"/>

        <ImageView
            android:id="@+id/weixin_auth_login_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/weixin_login_selector"/>
    </LinearLayout>
</LinearLayout>
